# hengband_mac

./: .gitmodules  Makefile.am  configure.ac  readme-eng.md  readme_eng.txt  readme_mac_jp.txt
.github/workflows/: release.yaml  test-linux-build.yaml  test-mac-build.yaml
lib/edit/: Makefile.am  MonsterRaceDefinitions.txt
lib/edit/quests/: Makefile.am
lib/edit/towns/: Makefile.am
lib/file/: Makefile.am
lib/file/books/: Makefile.am
lib/help/: Makefile.am
lib/pref/: Makefile.am  graf-abt.prf  graf-new.prf  graf-ori.prf  graf-xxx.prf  pref-mac.prf  pref-opt.prf
lib/xtra/: .gitattributes
lib/xtra/graf/: Makefile.am  list.txt  osx_bmp2png.py
lib/xtra/music/: Makefile.am  music.cfg  readme.txt
lib/xtra/sound/: Makefile.am  readme.txt  sound.cfg
src/: Makefile.am  angband.h  artifact.c  autopick.c  avatar.c  birth.c  bldg.c  cave.c  chuukei.c  cmd1.c  cmd2.c  cmd3.c  cmd4.c  cmd5.c  cmd6.c  defines.h  do-spell.c  dungeon.c  effects.c  externs.h  files.c  flavor.c  floors.c  generate.c  generate.h  grafmode.c  grafmode.h  grid.c  grid.h  h-basic.h  h-config.h  h-define.h  h-system.h  h-type.h  hex.c  hissatsu.c  inet.c  init.c  init.h  init1.c  (+51 more)
src/artifact/: artifact-info.cpp
src/cmd-action/: cmd-spell.c
src/cmd-io/: cmd-process-screen.cpp
src/cmd-item/: cmd-equipment.c
src/cocoa/: Angband-Cocoa.strings  Angband-Cocoa.xml  AngbandAudio.h  AngbandAudio.mm  AppDelegate.h  AppDelegate.m  CommandMenu.plist  SoundAndMusic.h  SoundAndMusic.mm
src/cocoa/Base.lproj/: MainMenu.nib  MainMenu.xib  SoundAndMusic.nib  SoundAndMusic.xib
src/cocoa/Japanese.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
src/cocoa/en.lproj/: CommandMenu.strings  Credits.html  GraphicsMenu.strings  Localizable.strings
src/cocoa/en.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
src/cocoa/ja.lproj/: CommandMenu.strings  Credits.html  GraphicsMenu.strings  Localizable.strings  MainMenu.strings  SoundAndMusic.strings
src/cocoa/ja.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
src/core/: asking-player.cpp
src/floor/: floor-save.c  floor-save.cpp
src/inventory/: item-getter.c
src/io/: chuukei.c  record-play-movie.c
src/main/: angband-initializer.c  angband-initializer.cpp  angband-initializer.h  init.c  init.h
src/main-win/: graphics-win.cpp
src/monster/: monster-update.c
src/mspell/: mspell-summon.c
src/object/: object-flags.cpp
src/object-enchant/: object-smith.cpp
src/player/: player-status.c
src/save/: floor-writer.cpp  item-writer.cpp  save.cpp
src/store/: purchase-order.cpp  sell-order.cpp
src/system/: grafmode.cpp  grafmode.h  h-config.h
src/util/: angband-files.c  angband-files.cpp  angband-files.h  flag-group.h  sha256.cpp  util.c
src/view/: display-map.cpp
src/wizard/: wizard-spells.c
