## Makefile.am -- Process this file with automake to process Makefile.in

AUTOMAKE_OPTIONS = foreign

visual_studio_files = \
	Hengband_vcs2017/Hengband.sln \
	Hengband_vcs2017/Hengband/Hengband.vcxproj \
	Hengband_vcs2017/Hengband/Hengband.vcxproj.filters \
	Hengband_vcs2017/Hengband/packages.config

EXTRA_DIST = \
	autopick.txt \
	autopick_eng.txt \
	bootstrap \
	readme.txt \
	readme_angband \
	readme_eng.txt \
	hengband.spec \
	$(visual_studio_files)

SUBDIRS = src lib
