## Makefile.am -- Process this file with automake to process Makefile.in

EXTRA_DIST = \
	readme.txt \
	desktop.ini \
	delete.me \
	music.cfg \
	$(music_files)

music_files = \
	The_Serpent_of_Chaos.mp3 \
	ambush.mp3 \
	arena.mp3 \
	battle.mp3 \
	build.mp3 \
	dun_high1.mp3 \
	dun_high2.mp3 \
	dun_high3.mp3 \
	dun_high4.mp3 \
	dun_high5.mp3 \
	dun_low1.mp3 \
	dun_low2.mp3 \
	dun_low3.mp3 \
	dun_low4.mp3 \
	dun_low5.mp3 \
	dun_med1.mp3 \
	dun_med2.mp3 \
	dun_med3.mp3 \
	dun_med4.mp3 \
	dun_med5.mp3 \
	exit.mp3 \
	feel1.mp3 \
	feel2.mp3 \
	feild_med3.mp3 \
	field_high1.mp3 \
	field_high2.mp3 \
	field_high3.mp3 \
	field_low1.mp3 \
	field_low2.mp3 \
	field_low3.mp3 \
	field_med1.mp3 \
	field_med2.mp3 \
	field_med3.mp3 \
	gameover.mp3 \
	new_game.mp3 \
	quest1.mp3 \
	quest2.mp3 \
	quest3.mp3 \
	quest4.mp3 \
	quest_clear.mp3 \
	town1.mp3 \
	town2.mp3 \
	town3.mp3 \
	town4.mp3 \
	town5.mp3 \
	wild.mp3 \
	winner.mp3
